--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Hello, world!</h1>
-    </div>
     <div class="container-fluid">
-      <h1>Hello, world!</h1>
+      <div class="row">
+        <div class="col">
+          <h1>Hello, world!</h1>
+        </div>
+        <div class="col">
+          <h1>Hello, planet!</h1>
+        </div>
+        <div class="col">
+          <h1>Hello, Earth!</h1>
+        </div>
+      </div>
     </div>
     <!-- Bootstrap Bundle with Popper JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
