--- a/index.html
+++ b/index.html
@@ -9,18 +9,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style>
+      .demo-box {
+        padding: 1rem;
+        margin: 1rem;
+        width: auto;
+        border: 1px solid black;
+      }
+      div[class^="col"]{
+        background-color:dodgerblue;
+        color: wheat;
+        border: solid 1px skyblue
+      }
+    </style>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <h1>Hello, world!</h1>
-        </div>
-        <div class="col">
-          <h1>Hello, planet!</h1>
-        </div>
-        <div class="col">
-          <h1>Hello, Earth!</h1>
+    <div class="demo-box">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col">
+            <h1>Hello, world!</h1>
+          </div>
+          <div class="col">
+            <h1>Hello, planet!</h1>
+          </div>
+          <div class="col">
+            <h1>Hello, Earth!</h1>
+          </div>
         </div>
       </div>
     </div>
