--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
 
     <title>Hello, world!</title>
     <style>
@@ -14,12 +19,12 @@
         padding: 1rem;
         margin: 1rem;
         width: auto;
-        border: 1px solid black;
+        border: 1px solid lightgray;
       }
-      div[class^="col"]{
-        background-color:dodgerblue;
+      div[class^="col"] {
+        background-color: dodgerblue;
         color: wheat;
-        border: solid 1px skyblue
+        border: solid 1px skyblue;
       }
     </style>
   </head>
@@ -28,19 +33,58 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col">
-            <h1>Hello, world!</h1>
+            <h1>col</h1>
           </div>
           <div class="col">
-            <h1>Hello, planet!</h1>
+            <h1>col</h1>
           </div>
           <div class="col">
-            <h1>Hello, Earth!</h1>
+            <h1>col</h1>
+          </div>
+        </div>
+        <br>  
+        <div class="row">
+          <div class="col-6">
+            <h1>col-6</h1>
+          </div>
+          <div class="col">
+            <h1>col</h1>
+          </div>
+          <div class="col">
+            <h1>col</h1>
+          </div>
+        </div>
+        <br>  
+        <div class="row">
+          <div class="col-sm">
+            <h1>col-sm</h1>
+          </div>
+          <div class="col-sm">
+            <h1>col-sm</h1>
+          </div>
+          <div class="col-sm">
+            <h1>col-sm</h1>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-sm-6">
+            <h1>col-sm-6</h1>
+          </div>
+          <div class="col-sm">
+            <h1>col-sm</h1>
+          </div>
+          <div class="col-sm">
+            <h1>col-sm</h1>
           </div>
         </div>
       </div>
     </div>
     <!-- Bootstrap Bundle with Popper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
