--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <title>Hello, world!</title>
     <style>
@@ -21,6 +16,11 @@
         width: auto;
         border: 1px solid lightgray;
       }
+      .card {
+        margin: 1rem;
+        width: auto;        
+      }
+
       div[class^="col"] {
         background-color: dodgerblue;
         color: wheat;
@@ -31,7 +31,7 @@
         font-size: 1.2em;
         font-weight: bold;
         display: block;
-        color: #222;
+        color:wheat;
         margin: 0.417em 0 0.083em; /*5px 0 1px*/
       }
       .left {
@@ -72,6 +72,10 @@
       div.c12 {
         float: left;
         margin-right: 15px;
+        background-color: dodgerblue;
+        color: wheat;
+        border: solid 1px skyblue;
+
       }
 
       .c5 {
@@ -144,36 +148,63 @@
       </div>
     </div>
     <br />
-    <div class="demo-box">
-      <h2 class="text-info">Old Form</h1>
-      <form class="mp_form">
-        <div class="old-row">
-          <div class="c5 TPad-2">
-            <label>c5</label>
+    <div class="card">
+      <div class="card-header">Old Form</div>
+      <div class="card-body">
+        <form class="mp_form">
+          <div class="old-row">
+            <div class="c5 TPad-2">
+              <label>c5</label>
+            </div>
+            <div class="c11">
+              <label class="left">c11</label>
+              <select id="selDemo">
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+            </div>
+            <div class="c12">
+              <label class="left">c12</label>
+              <input type="text" id="txtDemo" />
+            </div>
           </div>
-          <div class="c11">
-            <label class="left">c11</label>
-            <select id="selDemo">
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-            </select>
-          </div>
-          <div class="c12">
-            <label class="left">c12</label>
-            <input type="text" id="txtDemo" />
-          </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
-    <div class="demo-box">
-      <h2 class="text-info">Bootstrap Form</h2>
+    <br>
+
+    <div class="card">
+      <div class="card-header">Bootstrap Form</div>
+      <div class="card-body">
+        <div class="container-fluid">
+          <form>
+            <div class="form-row">
+                <div class="col-sm-1 al">
+                  <p>col-sm-1</p>
+                </div>
+                <div class="col-sm-2 form-group">
+                  <label for="selDemoBs">col-sm-2</label>
+                  <select class="custom-select" id="selDemoBs">
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-sm-2 form-group">
+                  <label for="txtDemoBs">
+                    col-sm-2
+                  </label>
+                  <input type="text" class="custom-control">
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+    
+      </div>
     </div>
     <!-- Bootstrap Bundle with Popper JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  </body>
 </html>
