--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
 
@@ -42,7 +42,7 @@
             <h1>col</h1>
           </div>
         </div>
-        <br>  
+        <br />
         <div class="row">
           <div class="col-6">
             <h1>col-6</h1>
@@ -54,7 +54,7 @@
             <h1>col</h1>
           </div>
         </div>
-        <br>  
+        <br />
         <div class="row">
           <div class="col-sm">
             <h1>col-sm</h1>
@@ -66,7 +66,7 @@
             <h1>col-sm</h1>
           </div>
         </div>
-        <br>
+        <br />
         <div class="row">
           <div class="col-sm-6">
             <h1>col-sm-6</h1>
@@ -82,8 +82,13 @@
     </div>
     <!-- Bootstrap Bundle with Popper JS -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"
     ></script>
   </body>
