--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         color: wheat;
         border: solid 1px skyblue;
       }
+
       .mp_form label,
       p.label {
         font-size: 1.2em;
@@ -34,9 +35,11 @@
         color:wheat;
         margin: 0.417em 0 0.083em; /*5px 0 1px*/
       }
+
       .left {
         text-align: left !important;
       }
+
       .mp_form select,
       .mp_form input,
       .mp_form textarea {
@@ -50,9 +53,11 @@
       .mp_form select optgroup option {
         padding-left: 10px;
       }
+
       .mp_form select {
         padding: 1px 1px 1px 0;
       }
+
       div.old-row:after {
         content: ".";
         display: block;
@@ -60,13 +65,16 @@
         clear: both;
         visibility: hidden;
       }
+
       * html .clearfix,
       * html div.old-row {
         height: 1%;
       }
+
       div.old-row {
         margin-bottom: 7px;
       }
+
       div.c5,
       div.c11,
       div.c12 {
@@ -75,7 +83,6 @@
         background-color: dodgerblue;
         color: wheat;
         border: solid 1px skyblue;
-
       }
 
       .c5 {
@@ -93,7 +100,19 @@
       .TPad-2 {
         padding-top: 2.4em;
       }
-    </style>
+      .mp_warning {
+        padding: 7px;
+        margin: 5px 0;
+        font-size: 12px;
+        border-radius: 3px 3px 3px 3px;
+        -webkit-border-radius: 3px 3px 3px 3px;
+        -moz-border-radius: 3px 3px 3px 3px;
+        background-color: #ffffe5;
+        border: 1px solid #f93;
+        color: #A0522D;
+      }
+
+  </style>
   </head>
   <body>
     <div class="demo-box">
@@ -201,10 +220,32 @@
             </div>
           </form>
         </div>
-    
       </div>
     </div>
+    <br>  
+    <div class="card">
+      <div class="card-header">
+        Old Warning Text
+      </div>
+      <div class="card-body">
+        <p class="mp_warning">
+          Note: You have to cast at least @Model.MinVotesToCast vote(s).
+      </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        Bootstrap Warning Text
+      </div>
+      <div class="card-body">
+        <p class="alert alert-warning">
+          Note: You have to cast at least @Model.MinVotesToCast vote(s).
+      </p>
+      </div>
+    </div>
+
     <!-- Bootstrap Bundle with Popper JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  
+  </body>
 </html>
