--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hello, world!</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
 
     <style>
       .demo-box {
@@ -17,7 +22,7 @@
       }
       .card {
         margin: 1rem;
-        width: auto;        
+        width: auto;
       }
 
       div[class^="col"] {
@@ -31,7 +36,7 @@
         font-size: 1.2em;
         font-weight: bold;
         display: block;
-        color:wheat;
+        color: wheat;
         margin: 0.417em 0 0.083em; /*5px 0 1px*/
       }
 
@@ -108,143 +113,38 @@
         -moz-border-radius: 3px 3px 3px 3px;
         background-color: #ffffe5;
         border: 1px solid #f93;
-        color: #A0522D;
+        color: #a0522d;
       }
-
-  </style>
+    </style>
   </head>
   <body>
-    <div class="demo-box">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col">
-            <h1>col</h1>
-          </div>
-          <div class="col">
-            <h1>col</h1>
-          </div>
-          <div class="col">
-            <h1>col</h1>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-6">
-            <h1>col-6</h1>
-          </div>
-          <div class="col">
-            <h1>col</h1>
-          </div>
-          <div class="col">
-            <h1>col</h1>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-6">
-            <h1>col-sm-6</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br />
     <div class="card">
-      <div class="card-header">Old Form</div>
-      <div class="card-body">
-        <form class="mp_form">
-          <div class="old-row">
-            <div class="c5 TPad-2">
-              <label>c5</label>
-            </div>
-            <div class="c11">
-              <label class="left">c11</label>
-              <select id="selDemo">
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
-            </div>
-            <div class="c12">
-              <label class="left">c12</label>
-              <input type="text" id="txtDemo" />
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-    <br>
-
-    <div class="card">
-      <div class="card-header">Bootstrap Form</div>
-      <div class="card-body">
-        <div class="container-fluid">
-          <form>
-            <div class="form-row">
-                <div class="col-sm-1 al">
-                  <p>col-sm-1</p>
-                </div>
-                <div class="col-sm-2 form-group">
-                  <label for="selDemoBs">col-sm-2</label>
-                  <select class="custom-select" id="selDemoBs">
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
-                </div>
-                <div class="col-sm-2 form-group">
-                  <label for="txtDemoBs">
-                    col-sm-2
-                  </label>
-                  <input type="text" class="custom-control">
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    <br>  
-    <div class="card">
-      <div class="card-header">
-        Old Warning Text
-      </div>
+      <div class="card-header">Old Warning Text</div>
       <div class="card-body">
         <p class="mp_warning">
           Note: You have to cast at least @Model.MinVotesToCast vote(s).
-      </p>
+        </p>
       </div>
     </div>
     <div class="card">
-      <div class="card-header">
-        Bootstrap Warning Text
-      </div>
+      <div class="card-header">Bootstrap Warning Text</div>
       <div class="card-body">
         <p class="alert alert-warning">
           Note: You have to cast at least @Model.MinVotesToCast vote(s).
-      </p>
+        </p>
       </div>
     </div>
 
     <!-- Bootstrap Bundle with Popper JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
