fix formatting issue

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
 
     <title>Hello, world!</title>
     <style>
       .card {
         margin: 1rem;
-        width: auto;        
+        width: auto;
       }
 
       div[class^="col"] {
@@ -25,7 +30,7 @@
         font-size: 1.2em;
         font-weight: bold;
         display: block;
-        color:wheat;
+        color: wheat;
         margin: 0.417em 0 0.083em; /*5px 0 1px*/
       }
       .left {
@@ -69,7 +74,6 @@
         background-color: dodgerblue;
         color: wheat;
         border: solid 1px skyblue;
-
       }
 
       .c5 {
@@ -114,7 +118,7 @@
         </form>
       </div>
     </div>
-    <br>
+    <br />
 
     <div class="card">
       <div class="card-header">Bootstrap Form</div>
@@ -122,32 +126,37 @@
         <div class="container-fluid">
           <form>
             <div class="form-row">
-                <div class="col-sm-1 al">
-                  <p>col-sm-1</p>
-                </div>
-                <div class="col-sm-2 form-group">
-                  <label for="selDemoBs">col-sm-2</label>
-                  <select class="custom-select" id="selDemoBs">
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
-                </div>
-                <div class="col-sm-2 form-group">
-                  <label for="txtDemoBs">
-                    col-sm-2
-                  </label>
-                  <input type="text" class="custom-control">
-                </div>
+              <div class="col-sm-1 al">
+                <p>col-sm-1</p>
+              </div>
+              <div class="col-sm-2 form-group">
+                <label for="selDemoBs">col-sm-2</label>
+                <select class="custom-select" id="selDemoBs">
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
+              </div>
+              <div class="col-sm-2 form-group">
+                <label for="txtDemoBs"> col-sm-2 </label>
+                <input type="text" class="custom-control" />
               </div>
             </div>
           </form>
         </div>
-    
       </div>
     </div>
+
     <!-- Bootstrap Bundle with Popper JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
