--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         width: auto;
       }
 
-      div[class^="col"] {
+      /* div[class^="col"] {
         background-color: dodgerblue;
         color: wheat;
         border: solid 1px skyblue;
-      }
+      } */
       .mp_form label,
       p.label {
         font-size: 1.2em;
         font-weight: bold;
         display: block;
-        color: wheat;
+        color: #222;
         margin: 0.417em 0 0.083em; /*5px 0 1px*/
       }
       .left {
@@ -71,9 +71,9 @@
       div.c12 {
         float: left;
         margin-right: 15px;
-        background-color: dodgerblue;
+        /* background-color: dodgerblue;
         color: wheat;
-        border: solid 1px skyblue;
+        border: solid 1px skyblue; */
       }
 
       .c5 {
@@ -90,6 +90,24 @@
 
       .TPad-2 {
         padding-top: 2.4em;
+      }
+      .btn_primary {
+        background: #0078fd url(../images/cui/bg_sprite_btn.png) repeat-x 0 0;
+        color: #fff;
+        border: 1px solid #0770e6;
+        text-shadow: 0 0 1px #000;
+        font-weight: bold;
+        font-size: 1.2em;
+        padding: 4px 7px;
+        border-radius: 3px 3px 3px 3px;
+        -webkit-border-radius: 3px 3px 3px 3px;
+        -moz-border-radius: 3px 3px 3px 3px;
+        min-width: 70px;
+        cursor: pointer;
+      }
+      .btn_primary:hover,
+      .btn_primary:focus {
+        background: #20b1ff;
       }
     </style>
   </head>
@@ -115,6 +133,7 @@
               <input type="text" id="txtDemo" />
             </div>
           </div>
+          <button class="btn_primary">btn_primary</button>
         </form>
       </div>
     </div>
@@ -126,7 +145,7 @@
         <div class="container-fluid">
           <form>
             <div class="form-row">
-              <div class="col-sm-1 al">
+              <div class="col-sm-1 align-self-center">
                 <p>col-sm-1</p>
               </div>
               <div class="col-sm-2 form-group">
@@ -139,7 +158,12 @@
               </div>
               <div class="col-sm-2 form-group">
                 <label for="txtDemoBs"> col-sm-2 </label>
-                <input type="text" class="custom-control" />
+                <input type="text" class="form-control" />
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-sm">
+                <button class="btn btn-primary">btn-primary</button>
               </div>
             </div>
           </form>
