--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="container-fluid">
           <form>
             <div class="form-row">
-              <div class="col-sm-1 al">
+              <div class="col-sm-1 align-self-center">
                 <p>col-sm-1</p>
               </div>
               <div class="col-sm-2 form-group">
@@ -215,7 +215,7 @@
               </div>
               <div class="col-sm-2 form-group">
                 <label for="txtDemoBs"> col-sm-2 </label>
-                <input type="text" class="custom-control" />
+                <input type="text" class="form-control" />
               </div>
             </div>
           </form>
