add btn_ classes

--- a/index.html
+++ b/index.html
@@ -115,6 +115,25 @@
         border: 1px solid #f93;
         color: #a0522d;
       }
+      .btn_primary {
+        background: #0078fd url(../images/cui/bg_sprite_btn.png) repeat-x 0 0;
+        color: #fff;
+        border: 1px solid #0770e6;
+        text-shadow: 0 0 1px #000;
+        font-weight: bold;
+        font-size: 1.2em;
+        padding: 4px 7px;
+        border-radius: 3px 3px 3px 3px;
+        -webkit-border-radius: 3px 3px 3px 3px;
+        -moz-border-radius: 3px 3px 3px 3px;
+        min-width: 70px;
+        cursor: pointer;
+      }
+      .btn_primary:hover,
+      .btn_primary:focus {
+        background: #20b1ff;
+      }
+
     </style>
   </head>
   <body>
