--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                 <input type="text" class="form-control" />
               </div>
             </div>
+            <div class="form-row">
+              <div class="col-sm">
+                <button class="btn btn-primary">btn-primary</button>
+              </div>
+            </div>
+
           </form>
         </div>
       </div>
