--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
               <input type="text" id="txtDemo" />
             </div>
           </div>
+          <button class="btn_primary">btn_primary</button>
         </form>
       </div>
     </div>
@@ -241,8 +242,7 @@
               <div class="col-sm">
                 <button class="btn btn-primary">btn-primary</button>
               </div>
-            </div>
-
+            </div>            
           </form>
         </div>
       </div>
