--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               </div>
             </div>
             <div class="form-row">
-              <div class="col-sm">
+              <div class="col-sm bg-white">
                 <button class="btn btn-primary">btn-primary</button>
               </div>
             </div>            
