--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         width: auto;
         border: 1px solid lightgray;
       }
-      .card {
-        margin: 1rem;
-        width: auto;
+
+      .demo-box .container-fluid .row {
+        height: 20rem
       }
 
       div[class^="col"] {
@@ -30,238 +30,22 @@
         color: wheat;
         border: solid 1px skyblue;
       }
-
-      .mp_form label,
-      p.label {
-        font-size: 1.2em;
-        font-weight: bold;
-        display: block;
-        color: wheat;
-        margin: 0.417em 0 0.083em; /*5px 0 1px*/
-      }
-
-      .left {
-        text-align: left !important;
-      }
-
-      .mp_form select,
-      .mp_form input,
-      .mp_form textarea {
-        border: solid 1px #ddd;
-        border-radius: 3px 3px 3px 3px;
-        -webkit-border-radius: 3px 3px 3px 3px;
-        -moz-border-radius: 3px 3px 3px 3px;
-        font-size: 12px;
-      }
-
-      .mp_form select optgroup option {
-        padding-left: 10px;
-      }
-
-      .mp_form select {
-        padding: 1px 1px 1px 0;
-      }
-
-      div.old-row:after {
-        content: ".";
-        display: block;
-        height: 0;
-        clear: both;
-        visibility: hidden;
-      }
-
-      * html .clearfix,
-      * html div.old-row {
-        height: 1%;
-      }
-
-      div.old-row {
-        margin-bottom: 7px;
-      }
-
-      div.c5,
-      div.c11,
-      div.c12 {
-        float: left;
-        margin-right: 15px;
-        background-color: dodgerblue;
-        color: wheat;
-        border: solid 1px skyblue;
-      }
-
-      .c5 {
-        width: 150px;
-      }
-
-      .c11 {
-        width: 330px;
-      }
-
-      .c12 {
-        width: 360px;
-      }
-
-      .TPad-2 {
-        padding-top: 2.4em;
-      }
-      .mp_warning {
-        padding: 7px;
-        margin: 5px 0;
-        font-size: 12px;
-        border-radius: 3px 3px 3px 3px;
-        -webkit-border-radius: 3px 3px 3px 3px;
-        -moz-border-radius: 3px 3px 3px 3px;
-        background-color: #ffffe5;
-        border: 1px solid #f93;
-        color: #a0522d;
-      }
-      .btn_primary {
-        background: #0078fd url(../images/cui/bg_sprite_btn.png) repeat-x 0 0;
-        color: #fff;
-        border: 1px solid #0770e6;
-        text-shadow: 0 0 1px #000;
-        font-weight: bold;
-        font-size: 1.2em;
-        padding: 4px 7px;
-        border-radius: 3px 3px 3px 3px;
-        -webkit-border-radius: 3px 3px 3px 3px;
-        -moz-border-radius: 3px 3px 3px 3px;
-        min-width: 70px;
-        cursor: pointer;
-      }
-      .btn_primary:hover,
-      .btn_primary:focus {
-        background: #20b1ff;
-      }
-
     </style>
   </head>
   <body>
     <div class="demo-box">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col">
-            <h1>col</h1>
+        <div class="row align-items-start">
+          <div class="col-sm-2">
+            <h1>col-sm-4</h1>
           </div>
-          <div class="col">
-            <h1>col</h1>
+          <div class="col-sm-2">
+            <h1>col-sm-4</h1>
           </div>
-          <div class="col">
-            <h1>col</h1>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-6">
-            <h1>col-6</h1>
-          </div>
-          <div class="col">
-            <h1>col</h1>
-          </div>
-          <div class="col">
-            <h1>col</h1>
+          <div class="col-sm-2">
+            <h1>col-sm-4</h1>
           </div>
         </div>
-        <br />
-        <div class="row">
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-6">
-            <h1>col-sm-6</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-          <div class="col-sm">
-            <h1>col-sm</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br />
-    <div class="card">
-      <div class="card-header">Old Form</div>
-      <div class="card-body">
-        <form class="mp_form">
-          <div class="old-row">
-            <div class="c5 TPad-2">
-              <label>c5</label>
-            </div>
-            <div class="c11">
-              <label class="left">c11</label>
-              <select id="selDemo">
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
-            </div>
-            <div class="c12">
-              <label class="left">c12</label>
-              <input type="text" id="txtDemo" />
-            </div>
-          </div>
-          <button class="btn_primary">btn_primary</button>
-        </form>
-      </div>
-    </div>
-    <br />
-
-    <div class="card">
-      <div class="card-header">Bootstrap Form</div>
-      <div class="card-body">
-        <div class="container-fluid">
-          <form>
-            <div class="form-row">
-              <div class="col-sm-1 align-self-center">
-                <p>col-sm-1</p>
-              </div>
-              <div class="col-sm-2 form-group">
-                <label for="selDemoBs">col-sm-2</label>
-                <select class="custom-select" id="selDemoBs">
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                </select>
-              </div>
-              <div class="col-sm-2 form-group">
-                <label for="txtDemoBs"> col-sm-2 </label>
-                <input type="text" class="form-control" />
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="col-sm bg-white">
-                <button class="btn btn-primary">btn-primary</button>
-              </div>
-            </div>            
-          </form>
-        </div>
-      </div>
-    </div>
-    <br />
-    <div class="card">
-      <div class="card-header">Old Warning Text</div>
-      <div class="card-body">
-        <p class="mp_warning">
-          Note: You have to cast at least @Model.MinVotesToCast vote(s).
-        </p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">Bootstrap Warning Text</div>
-      <div class="card-body">
-        <p class="alert alert-warning">
-          Note: You have to cast at least @Model.MinVotesToCast vote(s).
-        </p>
       </div>
     </div>
 
